Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97974

Using TextArea inside ScrollView produces binding loop warnings

    XMLWordPrintable

Details

    • All
    • bdb7bc054 (dev)

    Description

      see attached simple example BindingIssue.zip

      Steps to reproduce:
      1. Run example
      2. Click the button

      qrc:/main.qml:26:13: QML TextArea: Binding loop detected for property "implicitHeight"
      qrc:/qt-project.org/imports/QtQuick/Controls/Windows/ScrollView.qml:52:25: QML ScrollBar: Binding loop detected for property "visible"
      
      import QtQuick
      import QtQuick.Window
      import QtQuick.Controls
      import QtQuick.Layouts
      
      Window {
          width: 400
          height: 200
          visible: true
      
          ColumnLayout {
              id: layout
              anchors.fill: parent
      
              Button {
                  text: "CLICK ME!"
                  onClicked: {
                      textArea.append('Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.')
                  }
              }
      
              ScrollView {
                  Layout.fillWidth: true
                  Layout.fillHeight: true
      
                  TextArea {
                      id: textArea
                      readOnly: true
                      wrapMode: TextArea.WordWrap
                  }
              }
          }
      }
      

      Attachments

        For Gerrit Dashboard: QTBUG-97974
        # Subject Branch Project Status CR V

        Activity

          People

            kagro Kaj Grönholm
            studiosus Vladimir Belyavsky
            Votes:
            9 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes